--- a/Example/CLHelper/Base.lproj/Main.storyboard
+++ b/Example/CLHelper/Base.lproj/Main.storyboard
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qnX-pb-eRf">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--CLHelper-->
         <scene sceneID="ufC-wZ-h7g">
             <objects>
                 <viewController id="vXZ-lx-hvc" customClass="ViewController" customModule="CLHelper_Example" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,11 +21,99 @@
                     <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bhv-Jt-GEV">
+                                <rect key="frame" x="16" y="86" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.74509803919999995" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="e2f-Fr-ynl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <state key="normal" title="Get Current Location">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonLocationClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="BX8-5k-nFz"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UsN-7O-hjD">
+                                <rect key="frame" x="16" y="134" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.74509803919999995" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="9lv-1P-ejS"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <state key="normal" title="Reverse Geocoding">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonReverseGeocodingClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="HMT-gy-S9E"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ge2-EV-Zk8">
+                                <rect key="frame" x="16" y="182" width="343" height="40"/>
+                                <color key="backgroundColor" red="0.0" green="0.74509803919999995" blue="0.75294117650000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="Us1-Vt-hNO"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="15"/>
+                                <state key="normal" title="Geocoding">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="buttonGeocodingClicked:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="rsr-90-6tC"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Your Output" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IkB-sR-dwd">
+                                <rect key="frame" x="16" y="230" width="343" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="UsN-7O-hjD" firstAttribute="top" secondItem="Bhv-Jt-GEV" secondAttribute="bottom" constant="8" id="5Co-Fa-2PE"/>
+                            <constraint firstItem="UsN-7O-hjD" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="5JL-Pb-26q"/>
+                            <constraint firstItem="UsN-7O-hjD" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="Cyt-EI-2Zq"/>
+                            <constraint firstItem="ge2-EV-Zk8" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="Dbe-4T-Z4k"/>
+                            <constraint firstItem="Bhv-Jt-GEV" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="GxC-OY-5da"/>
+                            <constraint firstItem="ge2-EV-Zk8" firstAttribute="top" secondItem="UsN-7O-hjD" secondAttribute="bottom" constant="8" id="Mir-b1-cCu"/>
+                            <constraint firstItem="UsN-7O-hjD" firstAttribute="top" secondItem="Bhv-Jt-GEV" secondAttribute="bottom" constant="8" id="Sr4-b6-TwI"/>
+                            <constraint firstItem="Bhv-Jt-GEV" firstAttribute="top" secondItem="jyV-Pf-zRb" secondAttribute="bottom" constant="22" id="eNV-ip-4yX"/>
+                            <constraint firstItem="IkB-sR-dwd" firstAttribute="top" secondItem="ge2-EV-Zk8" secondAttribute="bottom" constant="8" id="lMG-mF-Ja8"/>
+                            <constraint firstItem="IkB-sR-dwd" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="pmw-MY-RR5"/>
+                            <constraint firstItem="Bhv-Jt-GEV" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="qBt-DZ-z0L"/>
+                            <constraint firstItem="ge2-EV-Zk8" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="qUd-hV-x4h"/>
+                            <constraint firstItem="IkB-sR-dwd" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="yEZ-6z-M2x"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="CLHelper" id="ITJ-6D-cUf"/>
+                    <connections>
+                        <outlet property="labelOutput" destination="IkB-sR-dwd" id="R6o-l5-RZQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="97.601199400299862"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="UI7-OZ-BhI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qnX-pb-eRf" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WnT-51-87g">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="VW1-ah-WHt"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gqE-h0-T9w" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="97.601199400299862"/>
         </scene>
     </scenes>
 </document>
